<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daily Bing Wallpapers</string>

    <!-- Generic phrases -->
    <string name="ok">OK</string>
    <string name="na">N/A</string>
    <string name="preview">Preview</string>
    <string name="today">Today</string>
    <string name="daily">Daily</string>

    <!-- Storage permission messages -->
    <string name="storage_permission_required">Storage access is required to display the imported Bing images.</string>
    <string name="storage_permission_not_available">Storage is not available. Requesting storage permission.</string>
    <string name="storage_permission_available">Storage permission is available. Loading images.</string>
    <string name="storage_permission_granted">Storage permission was granted. Loading images.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>

    <!-- Global settings (i.e app sets these explicitly)-->
    <string name="shared_prefs_app_globals_file_key">GLOBAL</string>
    <string name="shared_prefs_app_globals_last_update_time">GLOBAL_LAST_UPDATE_TIME</string>
    <string name="shared_prefs_app_globals_daily_mode_on">GLOBAL_DAILY_MODE</string>
    <string name="shared_prefs_app_globals_recorded_system_wallpaper_id">GLOBAL_RECORDED_SYSTEM_WALLPAPER_ID</string>
    <string name="shared_prefs_app_globals_recorded_lock_wallpaper_id">GLOBAL_RECORDED_LOCK_WALLPAPER_ID</string>
    <string name="shared_prefs_app_globals_last_daily_mode_update_date">GLOBAL_LAST_DAILY_MODE_UPDATE_DATE</string>
    <string name="shared_prefs_app_globals_wallpaper_target">GLOBAL_LAST_WALLPAPER_TARGET</string>

    <!-- Default preference settings (i.e user set these explicitly)-->
    <string name="default_prefs_wifi_only">DEFAULT_WIFI_ONLY</string>
    <string name="default_prefs_wallpaper_targets">DEFAULT_WALLPAPER_TARGETS</string>

    <!-- Main Activity strings -->
    <string name="activity_main_preview_date_label">Date:</string>
    <string name="activity_main_preview_copyright_label">Copyright:</string>
    <string name="activity_main_preview_copyright_link_label">Copyright Link:</string>
    <string name="activity_main_preview_wallpaper_image_storage_denied_text">
        Preview requires storage access.<br />
        To allow app permissions follow: Settings > Apps &amp; notifications > See all apps > Daily Bing Wallpapers > Permissions
    </string>
    <string name="activity_main_preview_wallpapers_gallery_storage_denied_text">
        Discovery requires storage access.<br />
        To allow app permissions follow: Settings > Apps &amp; notifications > See all apps > Daily Bing Wallpapers > Permissions
    </string>

    <string name="activity_main_preview_wallpapers_gallery_daily_item_headline">Enjoy an inspiring Bing image a day</string>
    <string name="activity_main_preview_wallpapers_gallery_daily_item_date">Daily</string>

    <string name="activity_main_preview_wallpapers_gallery_daily_item_dialog_title">Daily Wallpaper</string>
    <string name="activity_main_preview_wallpapers_gallery_daily_item_dialog_positive_button">OK</string>
    <string name="activity_main_preview_wallpapers_gallery_daily_item_dialog_negative_button">CANCEL</string>
    <string name="activity_main_preview_wallpapers_gallery_daily_item_dialog_message">
        A new Bing image will be set as your wallpaper every day
    </string>

    <string name="activity_main_gallery_header">Discover</string>

    <string name="activity_settings_toolbar_title">Settings</string>

    <!-- Settings activity strings -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="root_preferences_header_image_import">Image Download</string>
    <string name="root_preferences_pref_wifi_only">Download over wifi</string>
    <string name="root_preferences_pref_wifi_only_summary_on">Set to only use wifi to download images from Bing API</string>
    <string name="root_preferences_pref_wifi_only_summary_off">Set to use wifi or cellular to download images from Bing API</string>

    <string name="root_preferences_header_daily_mode">Daily Mode</string>
    <string name="root_preferences_header_wallpaper_target">Wallpaper targets</string>
    <string name="root_preferences_header_wallpaper_target_summary">Indicates which screens will be updated with the wallpaper</string>
    <string name="root_preferences_header_wallpaper_target_default_value">Wallpaper</string>


    <!-- Menu strings for discover gallery view -->
    <string name="menu_activity_main_gallery_item_set_as">Set as</string>

    <string name="menu_activity_main_gallery_daily_item_set_wallpaper">Set daily</string>

    <!-- Menu strings for app bar -->
    <string name="menu_app_bar_settings">Settings</string>

    <!-- Service foreground notifications -->
    <string name="import_service_notification_title">Downloading Bing images</string>
    <string name="validator_service_notification_title">Checking if Bing image files exist</string>

</resources>