<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/activity_main_preview_header"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing"
                android:text="@string/preview"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/activity_main_preview_wallpaper_image_storage_denied"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/spacing"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_main_preview_wallpaper_image_storage_denied_text" />

            <RelativeLayout
                android:id="@+id/activity_main_preview_wallpaper_wrapper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:id="@+id/activity_main_preview_wallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/activity_main_details_labels"
                    android:layout_alignParentTop="true"
                    app:cardCornerRadius="@dimen/corner_radius"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/activity_main_preview_wallpaper_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@color/activity_main_preview_background"
                        android:scaleType="centerCrop"
                        android:src="@drawable/test_wallpaper" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/activity_main_preview_wallpaper"
                    android:layout_alignEnd="@+id/activity_main_preview_wallpaper"
                    android:layout_alignBottom="@id/activity_main_preview_wallpaper"
                    android:layout_margin="@dimen/spacing"
                    android:gravity="center_vertical">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/activity_main_insight_toggle_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/ic_baseline_format_quote_24"
                        app:tint="@color/white" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/corner_radius">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/activity_main_preview_headline"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:overScrollMode="ifContentScrolls"
                            android:padding="@dimen/spacing"
                            android:text="This is a cool place" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_main_details_labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/spacing"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_main_preview_date_label" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_main_preview_copyright_label" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_main_preview_copyright_link_label" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/activity_main_details_labels"
                    android:layout_marginEnd="@dimen/spacing"
                    android:layout_toEndOf="@id/activity_main_details_labels"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/activity_main_details_date"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/na" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/activity_main_details_copyright"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/na" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/activity_main_details_copyright_link"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/na" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/activity_main_wallpapers_gallery_header"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing"
                android:text="@string/activity_main_gallery_header"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_main_wallpapers_gallery"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:overScrollMode="always"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/activity_main_wallpapers_gallery_storage_denied"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/spacing"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_main_preview_wallpapers_gallery_storage_denied_text" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>